# docs/swagger.yaml
@@ -280,6 +280,49 @@ paths:
       summary: 建筑楼层用电量
       tags:
       - Dashboard
+  /dashboard/building-floor-power-consumption-range:
+    get:
+      description: 建筑楼层用电量范围，根据粒度获取建筑所有楼层的用电量
+      parameters:
+      - description: period, hour/day/month/year
+        in: query
+        name: period
+        required: true
+        type: string
+      - description: floor_id
+        in: query
+        name: floor_id
+        required: true
+        type: string
+      - description: query_time,格式2024-01-01/2024-01/2024,不传则默认当天/当月/当年
+        in: query
+        name: query_time
+        type: string
+      - description: type,0:全部,1:照明,2:动力
+        in: query
+        name: type
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: objects array
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/entity.LabelData'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.Response'
+      summary: 建筑楼层用电量范围
+      tags:
+      - Dashboard
   /dashboard/building-power-consumption:
     get:
       description: 建筑用电量，根据粒度获取所有建筑的用电量
@@ -351,6 +394,48 @@ paths:
           schema:
             $ref: '#/definitions/common.Response'
       summary: 建筑细分用电量
+      tags:
+      - Dashboard
+  /dashboard/building-type-power-consumption-range:
+    get:
+      description: 建筑细分用电量范围，根据粒度,和分类获取所有建筑的用电量。分类为1:照明，2:动力,0:全部
+      parameters:
+      - description: period, day/month/year
+        in: query
+        name: period
+        required: true
+        type: string
+      - description: query_time,格式2024-01-01/2024-01/2024,不传则默认当天/当月/当年
+        in: query
+        name: query_time
+        type: string
+      - description: building_id,不传则查询所有建筑
+        in: query
+        name: building_id
+        type: string
+      - description: type
+        in: query
+        name: type
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: objects array
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/entity.LabelData'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.Response'
+      summary: 建筑细分用电量范围
       tags:
       - Dashboard
   /dashboard/park-carbon-emission:
